--- a/index.html
+++ b/index.html
@@ -73,13 +73,9 @@
         </div>
     </div>
     <!-- End top bar content -->
-    <div class="container">
-        <div class="row">
-            <div class="col">
-            </div>
-            <div class="col">
-            </div>
-        </div>
+    
+<div class="header-fixed-placeholder"></div>
+    
         <div class="row">
             <div class="col-4">
                 <a class="navbar-brand" href="#">
