updated vendor form and others

--- a/vendorform.html
+++ b/vendorform.html
@@ -80,6 +80,8 @@
             </div>
         </div>
     </div>
+    <!-- End Top bar content -->
+    <!-- Start Menu bar content -->
     <div class="container">
         <div class="row">
             <div class="col">
@@ -126,78 +128,86 @@
             </div>
         </div>
     </div>
-    <div class="vendorhead text-center">
-        <div class="vendorbanner">
-            <h2 class="vthone">Become Partner With US</h2>
-            <p class="vptext text-dark"> Get listed on India’s leading online
-marketplace for Laundry service, </p>
-
+    <!-- End Menu bar content -->
+    <!-- breadcrumb -->
+    <div class="breadcrumb">
+        <div class="container">
+            <div class="row">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="vendorform.html">Partner With Us</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div class="container-contact100">
-        <div class="wrap-contact100">
-            <form class="contact100-form validate-form">
-                <label class="label-input100" for="first-name">Tell us your name *</label>
-                <div class="wrap-input100  validate-input" data-validate="Type first name">
-                    <input id="first-name" class="input100" type="text" name="first-name" placeholder="First name">
-                    <span class="focus-input100"></span>
+    <!-- /breadcrumb  -->
+        <div class="">
+        
+    <!--  This is vendor banner section
+    <div class="vendorhead text-center">
+            <div class="vendorbanner">
+                <h2 class="vthone">Become Partner With US</h2>
+                <h4 class="vptext">Get listed on India’s leading <br> online
+marketplace for Laundry services</h4>
+            </div>
+        </div>
+ -->
+        <div class="container">
+                <h1 class="title-underline">Become Partner With US</h1>
+                <p class="text-center info-text">
+                    Get listed on India’s leading online
+marketplace for Laundry services
+                </p>
+            </div>
+        <!--  This is vendor banner section -->
+        <div class="vendorback">
+            <div class="container">
+                <div class="row">
                 </div>
-                <label class="label-input100" for="Address">Enter Your Company Name</label>
-                <div class="wrap-input100">
-                    <input id="phone" class="input100" type="text" name="phone" placeholder="Eg. Super Laudry Service">
-                    <span class="focus-input100"></span>
+                <div class="container emptyblock col-md-6">
                 </div>
-                <label class="label-input100" for="email">Enter your email *</label>
-                <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                    <input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
-                    <span class="focus-input100"></span>
-                </div>
-                <label class="label-input100" for="phone">Enter phone number</label>
-                <div class="wrap-input100">
-                    <input id="phone" class="input100" type="text" name="phone" placeholder="Eg. +1 800 000000">
-                    <span class="focus-input100"></span>
-                </div>
-                <label class="label-input100" for="message">Message *</label>
-                <div class="wrap-input100 validate-input" data-validate="Message is required">
-                    <textarea id="message" class="input100" name="message" placeholder="Write us a message"></textarea>
-                    <span class="focus-input100"></span>
-                </div>
-                <div class="container-contact100-form-btn">
-                    <button class="contact100-form-btn">
-                        Send Message
-                    </button>
-                </div>
-            </form>
-            <div class="vendorleftblock" style="background-image: url('');">
-                <div class="terms text-dark">
-                    <h4 class=""> Terms & Condations</h4>
-                    <p class="text-dark"> Please read all terms & Condations Carefully</p>
-                    <ol>
-                        <li>1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>2. Nunc id ligula vitae magna ornare semper ut a diam.</li>
-                        <li>3. Quisque vehicula risus eget nisl porta rhoncus.</li>
-                        <li>4. Integer id justo ac justo hendrerit lacinia.</li>
-                        <li>5. Vivamus euismod est ac nisl eleifend malesuada.</li>
-                        <li>6. Donec finibus arcu in ex sodales pellentesque.</li>
-                        <li>7. Suspendisse sed elit suscipit, faucibus turpis quis, ultrices massa.</li>
-                        <li>8. Integer non libero ornare, tristique dolor iaculis, ornare mauris.</li>
-                        <li>9. Vivamus faucibus mauris et metus elementum blandit.</li>
-                        <li>10. In vel metus eget ligula sodales aliquam a non metus.</li>
-                        <li>11. Sed sed lacus id nisl rhoncus dignissim.</li>
-                        <li>12. Donec luctus quam sit amet nunc eleifend, ut facilisis felis consectetur.</li>
-                        <li>13. Morbi facilisis risus nec volutpat dapibus.</li>
-                        <li>1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>2. Nunc id ligula vitae magna ornare semper ut a diam.</li>
-                        <li>3. Quisque vehicula risus eget nisl porta rhoncus.</li>
-                        <li>4. Integer id justo ac justo hendrerit lacinia.</li>
-                        <li>5. Vivamus euismod est ac nisl eleifend malesuada.</li>
+                <div class="formblock col-md-6 container">
+                    <form class="contact100-form validate-form">
+                        <label class="label-input100" for="first-name">Tell us your name *</label>
+                        <div class="wrap-input100  validate-input" data-validate="Type first name">
+                            <input id="first-name" class="input100" type="text" name="first-name" placeholder="First name">
+                            <span class="focus-input100"></span>
+                        </div>
+
+                        <label class="label-input100" for="first-name">Enter Your Company Name *</label>
+                        <div class="wrap-input100  validate-input" data-validate="Type first name">
+                            <input id="first-name" class="input100" type="text" name="first-name" placeholder="Your Laundry Services">
+                            <span class="focus-input100"></span>
+                        </div>
+
+                        <label class="label-input100" for="email">Enter your email *</label>
+                        <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                            <input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
+                            <span class="focus-input100"></span>
+                        </div>
                         
-                    </ol>
-                    </ol>
+                        <label class="label-input100" for="first-name">Enter Phone number*</label>
+                        <div class="wrap-input100  validate-input" data-validate="Type first name">
+                            <input id="first-name" class="input100" type="text" name="first-name" placeholder="Eg. +911919239191">
+                            <span class="focus-input100"></span>
+                        </div>
+
+                        <label class="label-input100" for="message">Message *</label>
+                        <div class="wrap-input100 validate-input" data-validate="Message is required">
+                            <textarea id="message" class="input100" name="message" placeholder="Write us a message"></textarea>
+                            <span class="focus-input100"></span>
+                        </div>
+                        <div class="container-contact100-form-btn">
+                            <button class="contact100-form-btn">
+                                Send Message
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+
     <div id="dropDownSelect1"></div>
     <!--===============================================================================================-->
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
